--- a/games/a-thirst-for-power/index.html
+++ b/games/a-thirst-for-power/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="../../assets/src/style.css">
-  <script src="../../assets/src/script.js" />
+  <script src="../../assets/src/script.js"></script>
   
   <title>A Thirst For Power</title>
 </head>
