Better styling and add listing pages

--- a/games/a-thirst-for-power/index.html
+++ b/games/a-thirst-for-power/index.html
@@ -17,21 +17,21 @@
   
   <header class="header">
     <div class="nav-container">
-      <a href="../../index.html">
+      <a class="blog-title" href="../../index.html">
         <div class="logo">Omlahid's Blog</div>
       </a>
       <button class="hamburger" id="hamburger">&#9776;</button>
       <ul class="nav" id="nav">
         <li>
           <a href="#">Posts</a>
-          <ul class="dropdown">
-            <li><a href="/posts/2025-10-01-why-a-blog/">Why I created a blog</a></li>
+          <ul class="dropdown"><li><a href="/posts/2025-10-11-why-a-blog/">Why I created a blog</a></li>
+            <li><a href="../../posts/">See all</a></li>
           </ul>
         </li>
         <li>
           <a href="#">Games</a>
-          <ul class="dropdown">
-            <li><a href="/games/a-thirst-for-power/">A Thirst For Power</a></li>
+          <ul class="dropdown"><li><a href="/games/a-thirst-for-power/">A Thirst For Power</a></li>
+            <li><a href="../../games/">See all</a></li>
           </ul>
         </li>
       </ul>
