Fix header issue and add new games

--- a/games/a-thirst-for-power/index.html
+++ b/games/a-thirst-for-power/index.html
@@ -23,15 +23,15 @@
       <button class="hamburger" id="hamburger">&#9776;</button>
       <ul class="nav" id="nav">
         <li>
-          <a href="#">Posts</a>
+          <a href="../../posts/">Posts</a>
           <ul class="dropdown"><li><a href="/posts/2025-10-11-why-a-blog/">Why I created a blog</a></li>
-            <li><a href="../../posts/">See all</a></li>
+            <li><a href="../../posts/">More...</a></li>
           </ul>
         </li>
         <li>
-          <a href="#">Games</a>
-          <ul class="dropdown"><li><a href="/games/a-thirst-for-power/">A Thirst For Power</a></li>
-            <li><a href="../../games/">See all</a></li>
+          <a href="../../games/">Games</a>
+          <ul class="dropdown"><li><a href="/games/a-thirst-for-power/">A Thirst For Power</a></li><li><a href="/games/ultra-jim-junior/">Ultra Jim Junior</a></li><li><a href="/games/the-bears-in-a-kayak/">The Bear&#39;s In A Kayak</a></li>
+            <li><a href="../../games/">More...</a></li>
           </ul>
         </li>
       </ul>
@@ -41,10 +41,17 @@
   <div class="body-container">
   
    <p><img src="../../assets/img/a-thirst-for-power.png" alt=""></p>
+<p>Get the download the game here:</p>
+<p>NOTE: These links are currently broken - figuring out a way to fix them. In the meantime, I apologize.</p>
+<ul>
+<li><a href="../../assets/game/A_Thirst_For_Power.zip">Windows</a></li>
+<li><a href="../../assets/game/A_Thirst_For_Power-macOS.zip">Mac</a></li>
+<li><a href="../../assets/game/A_Thirst_For_Power-Linux.zip">Linux</a></li>
+</ul>
 <p>This was my first Game Jam ever, back in July 2017 for Ludum Dare 39. I made it in a team of four people.</p>
 <p>At the time, I didn't have a lot of coding experience, and I was the only one of the group that wasn't a professional full-time programmer. I still wanted to participate, and spent my weekend mostly doing the art assets (in fact, I did the vast majority of them!), doing the character design, and coming up with the story. I also did quite a lot of level design, though we shared that task a lot.</p>
 <p>This is possibly the most polished of the games I've made, but I think that's mostly because we were 4 people who spent a WHOLE weekend together in the same appartment, probably working 30 to 40 hours each.</p>
-<p>At the moment, I'm unable to find a built copy of the game, but I'll be on the hunt for it!</p>
+<p>This game was made with PyGame.</p>
 
   
   </div>
