--- a/games/the-bears-in-a-kayak/index.html
+++ b/games/the-bears-in-a-kayak/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../assets/src/style.css">
   <script src="../../assets/src/script.js"></script>
   
-  <title>All Games</title>
+  <title>The Bear&#39;s In A Kayak</title>
 </head>
 <body>
   
@@ -40,32 +40,14 @@
   
   <div class="body-container">
   
-   <div class="list-container games"><div class="list-individual-item games">
-        <a class="list-individual-link" href=/games/a-thirst-for-power/>
-            <img class="game-img" src="../assets/img/a-thirst-for-power.png" />
-            <div class="game-text">
-                <div class="game-title">A Thirst For Power</div>
-                <div class="game-excerpt">The very first game I worked on. A bullethell-style top down shooter.</div>
-            </div>
-        </a>
-    </div><div class="list-individual-item games">
-        <a class="list-individual-link" href=/games/ultra-jim-junior/>
-            <img class="game-img" src="../assets/img/ultra-jim-jr.png" />
-            <div class="game-text">
-                <div class="game-title">Ultra Jim Junior</div>
-                <div class="game-excerpt">My first Unity project, made in a team of two people. An fourth-wall breaking game.</div>
-            </div>
-        </a>
-    </div><div class="list-individual-item games">
-        <a class="list-individual-link" href=/games/the-bears-in-a-kayak/>
-            <img class="game-img" src="../assets/img/the-bears-in-a-kayak.png" />
-            <div class="game-text">
-                <div class="game-title">The Bear's In A Kayak</div>
-                <div class="game-excerpt">My first solo game! An arcade infinite run style game.</div>
-            </div>
-        </a>
-    </div>
-</div>
+   <p><img src="../../assets/img/the-bears-in-a-kayak.png" alt=""></p>
+<p><a href="https://omlahid.itch.io/the-bears-in-a-kayak">You can play the game in browser here.</a></p>
+<p>I made this game in July 2020 for the GMTK Game Jam 2020, where the theme was Out Of Control.</p>
+<p>The point of the game was that the bear was loose in a kayak, and you control the river current left or right to try and make it avoid the rocks while catching the fish.</p>
+<p>This was supposed to be a duo project with a developer who had experience in game development, but unfortunately that game jam weekend, he suddenly became unavailable, and while he did help me think through a couple of things in the beginning, this was essentially a solo project, since I created all the assets (except the music) and all the code for the game.</p>
+<p>This was also my first foray into Unity, the first real game engine I was using. In 2020, Unity was still THE go-to engine for anyone doing video game development as a hobby, and there was (and still is) a TON of tutorials online helping you play with it.</p>
+<p>I had a lot of fun doing this game, learning both Unity and Blender. I'm not particularly proud of the end product, but it was an extremely good learning experience.</p>
+
   
   </div>
 </body>
