--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       <button class="hamburger" id="hamburger">&#9776;</button>
       <ul class="nav" id="nav">
         <li>
-          <a href="#">Posts</a>
+          <a href="../../posts/">Posts</a>
           <ul class="dropdown"><li><a href="/posts/2025-10-11-why-a-blog/">Why I created a blog</a></li>
-            <li><a href="../../posts/">See all</a></li>
+            <li><a href="../../posts/">More...</a></li>
           </ul>
         </li>
         <li>
-          <a href="#">Games</a>
-          <ul class="dropdown"><li><a href="/games/a-thirst-for-power/">A Thirst For Power</a></li>
-            <li><a href="../../games/">See all</a></li>
+          <a href="../../games/">Games</a>
+          <ul class="dropdown"><li><a href="/games/a-thirst-for-power/">A Thirst For Power</a></li><li><a href="/games/ultra-jim-junior/">Ultra Jim Junior</a></li><li><a href="/games/the-bears-in-a-kayak/">The Bear&#39;s In A Kayak</a></li>
+            <li><a href="../../games/">More...</a></li>
           </ul>
         </li>
       </ul>
@@ -60,6 +60,16 @@
     <a href=/games/a-thirst-for-power/>
         <img class="game-img" src="../assets/img/a-thirst-for-power.png" />
         <div class="game-title">A Thirst For Power</div>
+    </a>
+  </div><div class="individual-container game">
+    <a href=/games/ultra-jim-junior/>
+        <img class="game-img" src="../assets/img/ultra-jim-jr.png" />
+        <div class="game-title">Ultra Jim Junior</div>
+    </a>
+  </div><div class="individual-container game">
+    <a href=/games/the-bears-in-a-kayak/>
+        <img class="game-img" src="../assets/img/the-bears-in-a-kayak.png" />
+        <div class="game-title">The Bear's In A Kayak</div>
     </a>
   </div>
   <div class="individual-container game see-all">
