--- a/games/ultra-jim-junior/index.html
+++ b/games/ultra-jim-junior/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../assets/src/style.css">
   <script src="../../assets/src/script.js"></script>
   
-  <title>All Games</title>
+  <title>Ultra Jim Junior</title>
 </head>
 <body>
   
@@ -40,32 +40,13 @@
   
   <div class="body-container">
   
-   <div class="list-container games"><div class="list-individual-item games">
-        <a class="list-individual-link" href=/games/a-thirst-for-power/>
-            <img class="game-img" src="../assets/img/a-thirst-for-power.png" />
-            <div class="game-text">
-                <div class="game-title">A Thirst For Power</div>
-                <div class="game-excerpt">The very first game I worked on. A bullethell-style top down shooter.</div>
-            </div>
-        </a>
-    </div><div class="list-individual-item games">
-        <a class="list-individual-link" href=/games/ultra-jim-junior/>
-            <img class="game-img" src="../assets/img/ultra-jim-jr.png" />
-            <div class="game-text">
-                <div class="game-title">Ultra Jim Junior</div>
-                <div class="game-excerpt">My first Unity project, made in a team of two people. An fourth-wall breaking game.</div>
-            </div>
-        </a>
-    </div><div class="list-individual-item games">
-        <a class="list-individual-link" href=/games/the-bears-in-a-kayak/>
-            <img class="game-img" src="../assets/img/the-bears-in-a-kayak.png" />
-            <div class="game-text">
-                <div class="game-title">The Bear's In A Kayak</div>
-                <div class="game-excerpt">My first solo game! An arcade infinite run style game.</div>
-            </div>
-        </a>
-    </div>
-</div>
+   <p><img src="../../assets/img/ultra-jim-jr.png" alt="">
+<a href="https://omlahid.itch.io/ultra-jim-junior">You can download the game here.</a></p>
+<p>Note: This game only works on Windows.</p>
+<p>I made this game in August 2019 for the 2019 Community Jam. It had been 2 years since I'd last made a game, and we had a full week to work on this.</p>
+<p>I had taken my week off (for other reasons but still) and was working with someone who was not fully dedicated to the jam, so I spent a lot of time of this jam throwing ideas to myself and trying to see what I can figure out without coding.</p>
+<p>This project was made with Unity, which was very new to me. So my partner for this game handled all of the Unity stuff, and I made the assets and the story. I don't think I'd even installed Unity for this, and if I did, I didn't play with the game really except for testing purposes.</p>
+
   
   </div>
 </body>
