Add Antz game and fix typo

--- a/games/index.html
+++ b/games/index.html
@@ -53,7 +53,7 @@
             <img class="game-img" src="../assets/img/ultra-jim-jr.png" />
             <div class="game-text">
                 <div class="game-title">Ultra Jim Junior</div>
-                <div class="game-excerpt">My first Unity project, made in a team of two people. An fourth-wall breaking game.</div>
+                <div class="game-excerpt">My first Unity project, made in a team of two people. A fourth-wall breaking game.</div>
             </div>
         </a>
     </div><div class="list-individual-item games">
@@ -62,6 +62,14 @@
             <div class="game-text">
                 <div class="game-title">The Bear's In A Kayak</div>
                 <div class="game-excerpt">My first solo game! An arcade infinite run style game.</div>
+            </div>
+        </a>
+    </div><div class="list-individual-item games">
+        <a class="list-individual-link" href=/games/antz/>
+            <img class="game-img" src="../assets/img/antz.png" />
+            <div class="game-text">
+                <div class="game-title">Antz: The Picnic Simulator</div>
+                <div class="game-excerpt">A 3-person week-long jam, where you play ants stealing stuff from a picnic.</div>
             </div>
         </a>
     </div>
