Add cow game and basic analytics

--- a/games/index.html
+++ b/games/index.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   
   <link rel="stylesheet" href="../../assets/src/style.css">
   <script src="../../assets/src/script.js"></script>
@@ -70,6 +72,14 @@
             <div class="game-text">
                 <div class="game-title">Antz: The Picnic Simulator</div>
                 <div class="game-excerpt">A 3-person week-long jam, where you play ants stealing stuff from a picnic.</div>
+            </div>
+        </a>
+    </div><div class="list-individual-item games">
+        <a class="list-individual-link" href=/games/who-let-the-cows-out/>
+            <img class="game-img" src="../assets/img/who-let-the-cows-out.png" />
+            <div class="game-text">
+                <div class="game-title">Who Let The Cows Out</div>
+                <div class="game-excerpt">A puzzle sokoban where you push cows out of a stable.</div>
             </div>
         </a>
     </div>
