--- a/games/who-let-the-cows-out/index.html
+++ b/games/who-let-the-cows-out/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="../../assets/src/style.css">
   <script src="../../assets/src/script.js"></script>
   
-  <title>Ultra Jim Junior</title>
+  <title>Who Let The Cows Out</title>
 </head>
 <body>
   
@@ -42,12 +42,12 @@
   
   <div class="body-container">
   
-   <p><img src="../../assets/img/ultra-jim-jr.png" alt="">
-<a href="https://omlahid.itch.io/ultra-jim-junior">You can download the game here.</a></p>
-<p>Note: This game only works on Windows.</p>
-<p>I made this game in August 2019 for the 2019 Community Jam. It had been 2 years since I'd last made a game, and we had a full week to work on this.</p>
-<p>I had taken my week off (for other reasons but still) and was working with someone who was not fully dedicated to the jam, so I spent a lot of time of this jam throwing ideas to myself and trying to see what I can figure out without coding.</p>
-<p>This project was made with Unity, which was very new to me. So my partner for this game handled all of the Unity stuff, and I made the assets and the story. I don't think I'd even installed Unity for this, and if I did, I didn't play with the game really except for testing purposes.</p>
+   <p><img src="../../assets/img/who-let-the-cows-out.png" alt=""></p>
+<p><a href="https://omlahid.itch.io/who-let-the-cows-out">Play the game here!</a></p>
+<p>I made this game in October 2021 for Ludum Dare 49. I made this game using Pico-8, and I had a blast doing it! I just loved the simplicity of Pico-8 compared to big bulky engines like Unity.</p>
+<p>With Pico-8, the engine is so simple you can just hold it all in your head, and then you try to figure out clever ways of achieving things. In constrast, the Unity engine feels so complex that there are probably 100 ways to do something, and when you begin, you can almost never just &quot;figure it out&quot; and almost always have to follow tutorials, and if you somehow end up following different tutorials, they may tell you to do things in different ways, which makes you a bit more confused.</p>
+<p>I also like that I managed to do this full game in 48 hours. I eventually went back on it and took a couple of evenings to make the code not suck as much, and even expanded on it!</p>
+<p>This is probably the game I've made that I'm the most proud of, and when people ask me what game I've made for jams in the past, I always point them to this one.</p>
 
   
   </div>
