Add Who Let The Cows In

--- a/games/index.html
+++ b/games/index.html
@@ -85,6 +85,14 @@
                 <div class="game-excerpt">A puzzle sokoban where you push cows out of a stable.</div>
             </div>
         </a>
+    </div><div class="list-individual-item games">
+        <a class="list-individual-link" href=/games/who-let-the-cows-in/>
+            <img class="game-img" src="../assets/img/who-let-the-cows-in.png" />
+            <div class="game-text">
+                <div class="game-title">Who Let The Cows In</div>
+                <div class="game-excerpt">The sequel to Who Let The Cows Out</div>
+            </div>
+        </a>
     </div>
 </div>
   
