--- a/games/who-let-the-cows-in/index.html
+++ b/games/who-let-the-cows-in/index.html
@@ -26,7 +26,7 @@
       <ul class="nav" id="nav">
         <li>
           <a href="../../posts/">Posts</a>
-          <ul class="dropdown"><li><a href="/posts/2025-10-11-why-a-blog/">Why I created a blog</a></li><li><a href="/posts/2025-12-08-advance-wars/">Advance Wars Review</a></li>
+          <ul class="dropdown"><li><a href="/posts/2025-10-11-why-a-blog/">Why I created a blog</a></li><li><a href="/posts/2025-12-08-advance-wars/">Advance Wars Review</a></li><li><a href="/posts/2025-12-31-day-of-the-tentacle/">Day Of The Tentacle Review</a></li>
             <li><a href="../../posts/">More...</a></li>
           </ul>
         </li>
@@ -48,7 +48,7 @@
    <p><img src="../../assets/img/who-let-the-cows-in.png" alt=""></p>
 <p><a href="https://omlahid.itch.io/who-let-the-cows-in">Play the game here!</a></p>
 <p>I originally made this game in 2024, when I got my Miyoo Mini and I wanted to play a game I've actually made on it. I originally just shared it via email with a friend, but in late 2025, I edited the more personal parts of the game and uploaded it to Itch.io.</p>
-<p>Like Who Let The Cows Out, this game is made in Pico-8. It shares a lot of the same controls and same mechanics, but also adds a couple new ones. The biggest difference is that instead of trying to push cows out of the barn, you're trying to put them in specific spots on the map.</p>
+<p>Like <strong>Who Let The Cows Out</strong>, this game is made in Pico-8. It shares a lot of the same controls and same mechanics, but also adds a couple new ones. The biggest difference is that instead of trying to push cows out of the barn, you're trying to put them in specific spots on the map.</p>
 <p>The level design isn't as sharp as the first game in my opinion, but it's fine enough. I'd probably need to go back to it and add more variety to the puzzles. Still, I think the game holds well.</p>
 
   
